# eidos-engine

./: README.md  hello.py  pyproject.toml  requirements.txt
eidos_engine/etl/: load.py
examples/: delta_lake.ipynb
temp/: delta_lake.ipynb
