[project]
name = "eidos-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deltalake==0.24.0",
    "jupyter>=1.1.1",
    "logfire>=3.5.3",
    "pandas==2.2.3",
    "polars==1.22.0",
    "pyarrow==18.1.0",
    "pytz>=2025.1",
    "tqdm==4.67.1",
]
