[project]
name = "eidos-engine"
version = "0.2.0"
description = "A scalable and flexible ETL framework for distributed data processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=0.24.0",
    "jupyter>=1.1.1",
    "logfire>=3.5.3",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "tqdm>=4.67.1",
]
