[project]
name = "eidos-engine"
version = "1.0.0"
description = "A scalable and flexible ETL framework for distributed data processing."
readme = "README.md"
authors = [
  { name = 'Kevin Zezel Gomes' },
  { name = 'Felipe Bizzo' }
]
requires-python = ">=3.10"
dependencies = [
    "deltalake>=0.24.0",
    "logfire>=3.5.3",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
license-files = []

[project.urls]
homepage = 'https://github.com/EidosX/eidos-engine'
documentation = 'https://github.com/EidosX/eidos-engine'
repository = 'https://github.com/EidosX/eidos-engine'
